tests/snapshots/tui_snapshots__batch_delete_confirm_narrow.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases highest ID0248 "
" → projects 12   archive not mounted       ⚠ 1 needs you  ! "
" ⌕ / to search                         12/12 · newest · 6 ✓ "
"┌ delete ──────────────────────────────────────────────────┐"
"│ Type delete to confirm — these 6 projects and everything │"
"│ inside them will be gone:                                │"
"│ 2026-08-28_Lullaby_Remix_ID0248,                         │"
"│ 2026-08-27_Client_Onboarding_Acme_ID0247,                │"
"│ 2026-08-26_Old_Shoot_ID0246, 2026-08-25_Test_Run_ID0245, │"
"│ 2026-08-24_Spring_Campaign_ID0244,                       │"
"│ 2026-08-23_Live_Session_ID0243                           │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"│  ID0237 2026-08-17_Live_Session_ID0237                   │"
"└──────────────────────────────────────────────────────────┘"
" 6 marked · a verb acts on them instead of the row under th…"
" Enter confirm  Esc cancel  F1 help  Ctrl-p commands        "
