tests/snapshots/tui_snapshots__builder_panel_explains_the_highlighted_part.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                                             highest ID0248 "
" → projects 12   archive not mounted                                                                   ⚠ 1 needs you  ! "
"                                                                                                                        "
" ⌕ / to search the templates                                                                                        3/3 "
"┌ templates ────────────────────────────────┐┌ client-project ─────────────────────────────────────────────────────────┐"
"│  client-project    4                      ││ reading…                                                                │"
"│  general           4                      ││                                                                         │"
"│  music-video       4                      ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│         ┌ new template ────────────────────────────────────────────────────────────────────────────────────┐         │"
"│         │▸ Metadata    Music video · music-video · {date}_{i… │ Metadata                                   │         │"
"│         │  ID          ID0001, ID0002 …                       │                                            │         │"
"│         │  Variables   (none)                                 │ What the template is called, and the rule  │         │"
"│         │  Structure   (none)                                 │ that names every project made from it.     │         │"
"│         │  Files       (none)                                 │                                            │         │"
"│         │  Save        2 to look at first                     │ The naming pattern is plain text with      │         │"
"│         │  Discard     leave without writing                  │ {tokens} in it: the date, the project's    │         │"
"│         │                                                     │ number, and the answer to any question     │         │"
"│         │                                                     │ this template asks.                        │         │"
"│         │                                                     │                                            │         │"
"│         │                                                     │ A project made from it would be called     │         │"
"│         │                                                     │ 2026-01-31_ID0001_{artist}                 │         │"
"│         │                                                     │                                            │         │"
"│         │                                                     │                                            │         │"
"│         │                                                     │                                            │         │"
"│         │                                                     │                                            │         │"
"│         │ {artist} matches no variable — it stays in the folder name as written                            │         │"
"│         │ ↑↓ choose   H guide   Enter open   s save   Esc close   ? help   c commands                      │         │"
"│         └──────────────────────────────────────────────────────────────────────────────────────────────────┘         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"└───────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────┘"
"                                                                                                                        "
"                                                                                                                        "
