tests/snapshots/tui_snapshots__builder_panel_falls_back_to_the_footer_when_narrow.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                     highest ID0248 "
" → projects 12   archive not mounted                           ⚠ 1 needs you  ! "
" ⌕ / to search the templates                                                3/3 "
"┌ templates ─────────────────┐┌ client-project ────────────────────────────────┐"
"│  client-project    4       ││ reading…                                       │"
"│  general           4       ││                                                │"
"│  mus┌ new template ────────────────────────────────────────────────────┐     │"
"│     │▸ Metadata    (not set)                                           │     │"
"│     │  ID          ID0001, ID0002 …                                    │     │"
"│     │  Variables   (none)                                              │     │"
"│     │  Structure   (none)                                              │     │"
"│     │  Files       (none)                                              │     │"
"│     │  Save        4 to look at first                                  │     │"
"│     │  Discard     leave without writing                               │     │"
"│     │ what the template is called, and how its projects are named      │     │"
"│     │ ↑↓ choose   H guide   Enter open   s save   Esc close   ? help   │     │"
"│     └──────────────────────────────────────────────────────────────────┘     │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"└────────────────────────────┘└────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
