tests/snapshots/tui_snapshots__builder_panel_in_the_ascii_alphabet.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                                             highest ID0248 "
" -> projects 12   archive not mounted                                                                  ! 1 needs you  ! "
"                                                                                                                        "
" / / to search the templates                                                                                        3/3 "
"┌ templates ────────────────────────────────┐┌ client-project ─────────────────────────────────────────────────────────┐"
"│  client-project    4                      ││ reading…                                                                │"
"│  general           4                      ││                                                                         │"
"│  music-video       4                      ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│         ┌ new template ────────────────────────────────────────────────────────────────────────────────────┐         │"
"│         │  Metadata    (not set)                              │ Structure                                  │         │"
"│         │  ID          ID0001, ID0002 ...                     │                                            │         │"
"│         │  Variables   (none)                                 │ The empty folders every new project starts │         │"
"│         │> Structure   2 folders                              │ with.                                      │         │"
"│         │  Files       (none)                                 │                                            │         │"
"│         │  Save        3 to look at first                     │ One folder path per line. Use / to nest,   │         │"
"│         │  Discard     leave without writing                  │ on every platform.                         │         │"
"│         │                                                     │                                            │         │"
"│         │                                                     │ Only empty folders need listing. A folder  │         │"
"│         │                                                     │ that holds one of this template's files is │         │"
"│         │                                                     │ created for you.                           │         │"
"│         │                                                     │                                            │         │"
"│         │                                                     │ 2 folders in every project:                │         │"
"│         │                                                     │ `-- 01_Assets/                             │         │"
"│         │                                                     │     `-- Audio/                             │         │"
"│         │                                                     │                                            │         │"
"│         │                                                                                                  │         │"
"│         │ Up/Down choose   H guide   Enter open   s save   Esc close   ? help   c commands                 │         │"
"│         └──────────────────────────────────────────────────────────────────────────────────────────────────┘         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"└───────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────┘"
"                                                                                                                        "
"                                                                                                                        "
