tests/snapshots/tui_snapshots__builder_panel_names_what_is_still_missing.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                                             highest ID0248 "
" → projects 12   archive not mounted                                                                   ⚠ 1 needs you  ! "
"                                                                                                                        "
" ⌕ / to search the templates                                                                                        3/3 "
"┌ templates ────────────────────────────────┐┌ client-project ─────────────────────────────────────────────────────────┐"
"│  client-project    4                      ││ reading…                                                                │"
"│  general           4                      ││                                                                         │"
"│  music-video       4                      ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│         ┌ new template ────────────────────────────────────────────────────────────────────────────────────┐         │"
"│         │  Metadata    (not set)                              │ Save                                       │         │"
"│         │  ID          ID0001, ID0002 …                       │                                            │         │"
"│         │  Variables   (none)                                 │ Write it to your templates folder. Nothing │         │"
"│         │  Structure   (none)                                 │ has been written yet.                      │         │"
"│         │  Files       (none)                                 │                                            │         │"
"│         │▸ Save        4 to look at first                     │ 4 to look at — none of them stops a save:  │         │"
"│         │  Discard     leave without writing                  │                                            │         │"
"│         │                                                     │ Metadata — give it a name                  │         │"
"│         │                                                     │ Metadata — give it a slug                  │         │"
"│         │                                                     │ Metadata — write the naming pattern        │         │"
"│         │                                                     │ Variables — ask a question, or declare a   │         │"
"│         │                                                     │ folder                                     │         │"
"│         │                                                     │                                            │         │"
"│         │                                                     │                                            │         │"
"│         │                                                     │                                            │         │"
"│         │                                                     │                                            │         │"
"│         │                                                                                                  │         │"
"│         │ ↑↓ choose   H guide   Enter open   s save   Esc close   ? help   c commands                      │         │"
"│         └──────────────────────────────────────────────────────────────────────────────────────────────────┘         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"│                                           ││                                                                         │"
"└───────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────┘"
"                                                                                                                        "
"                                                                                                                        "
