tests/snapshots/tui_snapshots__builder_pattern_ignores_the_variables.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search the templates                                                                    3/3 "
"┌ templates ─────────────────────────┐┌ client-project ────────────────────────────────────────────┐"
"│  client-project    4               ││ reading…                                                   │"
"│  general           4               ││                                                            │"
"│  music-video       4               ││                                                            │"
"│                                    ││                                                            │"
"│       ┌ new template ────────────────────────────────────────────────────────────────────┐       │"
"│       │▸ Metadata    Music video · music-video · {date}_{id}   ⚠                         │       │"
"│       │  ID          ID0001, ID0002 …                                                    │       │"
"│       │  Variables   1  (artist)                                                         │       │"
"│       │  Structure   (none)                                                              │       │"
"│       │  Files       (none)                                                              │       │"
"│       │  Save        1 to look at first                                                  │       │"
"│       │  Discard     leave without writing                                               │       │"
"│       │ {artist} not in the pattern — every project gets the same folder name            │       │"
"│       │ ↑↓ choose   H guide   Enter open   s save   Esc close   ? help   c commands      │       │"
"│       └──────────────────────────────────────────────────────────────────────────────────┘       │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"└────────────────────────────────────┘└────────────────────────────────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
