tests/snapshots/tui_snapshots__builder_review.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search the templates                                                                    3/3 "
"┌ templates ─────────────────────────┐┌ client-project ────────────────────────────────────────────┐"
"│  client-project    4               ││ reading…                                                   │"
"│  general           4               ││                                                            │"
"│  music-video       4               ││                                                            │"
"│                                    ││                                                            │"
"│       ┌ new template ────────────────────────────────────────────────────────────────────┐       │"
"│       │  Metadata    Music video · music-video · {date}_{id}                             │       │"
"│       │  ID          ID0001, ID0002 …                                                    │       │"
"│       │  Variables   (none)                                                              │       │"
"│       │▸ Structure   2 folders                                                           │       │"
"│       │  Files       (none)                                                              │       │"
"│       │  Save        write the template                                                  │       │"
"│       │  Discard     leave without writing                                               │       │"
"│       │ the folders every new project starts with                                        │       │"
"│       │ ↑↓ choose   H guide   Enter open   s save   Esc close   ? help   c commands      │       │"
"│       └──────────────────────────────────────────────────────────────────────────────────┘       │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"└────────────────────────────────────┘└────────────────────────────────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
