tests/snapshots/tui_snapshots__builder_structure_tree.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search the templates                                                                    3/3 "
"┌ templates ─────────────────────────┐┌ client-project ────────────────────────────────────────────┐"
"│  client-project    4               ││ reading…                                                   │"
"│  general           4               ││                                                            │"
"│  music-video       4               ││                                                            │"
"│                                    ││                                                            │"
"│       ┌ new template · Structure ────────────────────────────────────────────────────────┐       │"
"│       │01_Assets                                 ├── 01_Assets/                          │       │"
"│       │01_Assets/raw                             │   └── raw/                            │       │"
"│       │02_Edit                                   └── 02_Edit/                            │       │"
"│       │                                                                                  │       │"
"│       │                                                                                  │       │"
"│       │                                                                                  │       │"
"│       │                                                                                  │       │"
"│       │                                                                                  │       │"
"│       │ one folder path per line — use / to nest on every platform                       │       │"
"│       │ Ctrl-S keep   Enter new line   Esc back   Ctrl-K drop the line                   │       │"
"│       └──────────────────────────────────────────────────────────────────────────────────┘       │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"└────────────────────────────────────┘└────────────────────────────────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
