tests/snapshots/tui_snapshots__builder_variable_form.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search the templates                                                                    3/3 "
"┌ templates ─────────────────────────┐┌ client-project ────────────────────────────────────────────┐"
"│  client-project    4               ││ reading…                                                   │"
"│  general           4               ││                                                            │"
"│  music-video       4               ││                                                            │"
"│                                    ││                                                            │"
"│       ┌ new template · Variables ────────────────────────────────────────────────────────┐       │"
"│       │  Slug               tier                                                         │       │"
"│       │  Label              Engagement type                                              │       │"
"│       │  Type               select                                                       │       │"
"│       │▸ Options            Client, Internal                                             │       │"
"│       │  Default                                                                         │       │"
"│       │  Transform          none                                                         │       │"
"│       │  Required           no                                                           │       │"
"│       │ for a select: the answers, separated by commas                                   │       │"
"│       │ Tab next field   Enter keep   Esc back                                           │       │"
"│       └──────────────────────────────────────────────────────────────────────────────────┘       │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"└────────────────────────────────────┘└────────────────────────────────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
